Scenario 3 update on classes messages sent and received added components for finance

--- a/src/org/kephis/ecs_kesws/EcsKeswsServiceControlPanel.form
+++ b/src/org/kephis/ecs_kesws/EcsKeswsServiceControlPanel.form
@@ -141,6 +141,7 @@
     <Component class="javax.swing.JButton" name="jButton3">
       <Properties>
         <Property name="text" type="java.lang.String" value="Stop"/>
+        <Property name="selected" type="boolean" value="true"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JProgressBar" name="jProgressBar1">
